infrastructure/configs/production/longhorn-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-gateway-system
      sectionName: http
    - name: envoy
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - longhorn.passer.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
